--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-gorgeous-header": ">= 0.1.0",
+    "react-native-modal": "^11.7.0",
     "react-native-modern-header": ">= 0.1.0",
     "react-native-profile-header": ">= 0.1.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-skeleton-content": "^1.0.20",
     "react-native-svg": "^12.1.0",
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-vector-icons": "^8.1.0",
