--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-native-dynamic-vector-icons": "^1.1.4",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-gorgeous-header": ">= 0.1.0",
     "react-native-modal": "^11.7.0",
+    "react-native-modal-animated": "0.0.2",
     "react-native-modern-header": ">= 0.1.0",
     "react-native-profile-header": ">= 0.1.0",
     "react-native-reanimated": "~1.13.0",
